<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingBottom="16dp"
    tools:context="edu.asu.bsse.tsjorda1.plactester.LocationDetailActivity">

    <TextView
        android:id="@+id/location_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:text="@string/loc_det_tit"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_view"
        android:layout_below="@id/location_detail_title"
        android:paddingBottom="15dp"
        android:weightSum="1" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:id="@+id/nameLabel"
            android:text="@string/loc_det_name"
            android:gravity="left"
            android:layout_weight="0.10"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:id="@+id/nameTV"
            android:layout_gravity="right"
            android:gravity="right"
            android:layout_weight="0.15"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description_view"
        android:layout_below="@id/name_view"
        android:paddingBottom="15dp"
        android:weightSum="1" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:id="@+id/descLabel"
            android:text="@string/loc_det_desc"
            android:gravity="left"
            android:layout_weight="0.10"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:id="@+id/descTV"
            android:layout_gravity="right"
            android:gravity="right"
            android:layout_weight="0.15"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/category_view"
        android:layout_below="@id/description_view"
        android:paddingBottom="15dp"
        android:weightSum="1" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:id="@+id/catLabel"
            android:text="@string/loc_det_cat"
            android:gravity="left"
            android:layout_weight="0.10"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:id="@+id/catTV"
            android:layout_gravity="right"
            android:gravity="right"
            android:layout_weight="0.15"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addressT_view"
        android:layout_below="@id/category_view"
        android:paddingBottom="15dp"
        android:weightSum="1" >

        <TextView
            android:id="@+id/addTLabel"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:gravity="left"
            android:text="@string/loc_det_addT"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:id="@+id/addTTV"
            android:layout_gravity="right"
            android:gravity="right"
            android:layout_weight="0.15"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addressS_view"
        android:layout_below="@id/addressT_view"
        android:paddingBottom="15dp"
        android:weightSum="1" >

        <TextView
            android:id="@+id/addSLabel"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:gravity="left"
            android:text="@string/loc_det_addS"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:id="@+id/addSTV"
            android:layout_gravity="right"
            android:gravity="right"
            android:layout_weight="0.15"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/elevation_view"
        android:layout_below="@id/addressS_view"
        android:paddingBottom="15dp"
        android:weightSum="1" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:id="@+id/elevLabel"
            android:text="@string/loc_det_elev"
            android:gravity="left"
            android:layout_weight="0.10"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:id="@+id/elevTV"
            android:layout_gravity="right"
            android:gravity="right"
            android:layout_weight="0.15"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/latitude_view"
        android:layout_below="@id/elevation_view"
        android:paddingBottom="15dp"
        android:weightSum="1" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:id="@+id/latLabel"
            android:text="@string/loc_det_lat"
            android:gravity="left"
            android:layout_weight="0.10"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:id="@+id/latTV"
            android:layout_gravity="right"
            android:gravity="right"
            android:layout_weight="0.15"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/longitude_view"
        android:layout_below="@id/latitude_view"
        android:paddingBottom="15dp"
        android:weightSum="1" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:id="@+id/longLabel"
            android:text="@string/loc_det_long"
            android:gravity="left"
            android:layout_weight="0.10"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:id="@+id/longTV"
            android:layout_gravity="right"
            android:gravity="right"
            android:layout_weight="0.15"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

</RelativeLayout>
